Updated index file

--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,8 @@
 </head>
 
 <body>
-<h1>welcome to HTML5 by Lady Warhawk</h1>
+<h1>Welcome to HTML5</h1>
+<sub>by Lady Warhawk</sub>
+<p>This is going to be a challenging course. Need to figure out how to do the branching and get these files in the right location.</p>
 </body>
 </html>
